fix display z-index vote buttons, fix button add vote when user never vote for

--- a/frontend/src/sass/layouts/_header.scss
+++ b/frontend/src/sass/layouts/_header.scss
@@ -9,6 +9,7 @@
   width: 100vw;
   background-color: $primaryColor;
   box-shadow: $boxShadow;
+  z-index: 1;
   &__logo {
     grid-row: 1;
     grid-column: 1;
